added some mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
             <div class="player tab">
                 <h2>Player</h2>
                 <div class="player-div">
-                    <object id="SVGObject" data="./svg/open-hand.svg" type="" width="90px" id="hand" height="90px"></object id="SVGObject">
-                </div>
-                    <object id="SVGObject" data="./svg/fist.svg" type="" width="90px"
-                    id="fist" height="90px"></object>
+                    <img src=".//svg/paper.png" id="paper" alt="open hand">
 
-                    <object id="SVGObject" data="./svg/scissor.svg" type="" width="90px" id="scissors" height="90px"></object>
+                    <img src="./svg/hand.png" id="rock" id="paper" alt="open hand">
+
+                    <img src="./svg/scissors.png" id="scissors" id="paper" alt="open hand">
+                </div>
+
                     <div class="score">
                         <p>I'm a score element</p>
                     </div>
@@ -56,14 +57,15 @@
                 </div>
             </div>
 
-
             <div class="computer tab">
                 <h2>Computer</h2>
-                <object data="./svg/open-hand.svg" type="" width="90px" height="90px"></object>
+                <div class="computer-div">
+                    <img src=".//svg/paper.png" altt="open hand">
 
-                <object data="./svg/fist.svg" type="" width="90px" height="90px"></object>
+                    <img src="./svg/hand.png" altt="open hand">
 
-                <object data="./svg/scissor.svg" type="" width="90px" height="90px"></object>
+                    <img src="./svg/scissors.png" alt="open hand">
+                </div>
                 <div class="score">
                     <p>I'm a score element</p>
                 </div>
@@ -72,6 +74,9 @@
 
         <div class="footer-container">
             <p>bomszx</p>
+            <a href="https://www.flaticon.com/free-icons/hands-and-gestures" title="hands and gestures icons">Hands and gestures icons created by Freepik - Flaticon</a>
+
+            <a href="https://www.flaticon.com/free-icons/equal" title="equal icons">Icon Pack: Numbers And Special Characters icons created by Md Tanvirul Haque - Flaticon</a>
         </div>
     </div>
 </body>
