--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div class="player tab">
                 <h2>Player</h2>
                 <div class="player-div">
-                    <img src=".//svg/paper.png" id="paper" alt="open hand">
+                    <img src=".//svg/paper.png" id="paper" alt="open hand">              
 
-                    <img src="./svg/hand.png" id="rock" id="paper" alt="open hand">
+                    <img src="./svg/rock.png" id="rock" id="paper" alt="open hand">
 
                     <img src="./svg/scissors.png" id="scissors" id="paper" alt="open hand">
                 </div>
@@ -36,17 +36,16 @@
 
             <div class="results-container">
                 <div class="result-icons">
-                    <div class="player-choice">
-                        <object data="./svg/scissor.svg" type="" width="150px" height="150px"></object>
+                    <div class="player choice">
+                        <img id="player-choice" src="./svg/rock.png" alt="">
                     </div>
 
                     <div class="decision-choice">
-                        <object data="./svg/equals.svg" width="90px" height="90px" type=""></object>
+                        <img src="./svg/equal.png" alt="">
                     </div>
-
         
                     <div class="computer-choice">
-                        <object data="./svg/scissor.svg" type="" width="150px" height="150px"></object>
+                        <img src="./svg/rock.png" alt="">
                     </div>
                 </div>
     
@@ -62,7 +61,7 @@
                 <div class="computer-div">
                     <img src=".//svg/paper.png" altt="open hand">
 
-                    <img src="./svg/hand.png" altt="open hand">
+                    <img src="./svg/rock.png" altt="open hand">
 
                     <img src="./svg/scissors.png" alt="open hand">
                 </div>
