added click function to run playround with player input

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <div class="player tab">
                 <h2>Player</h2>
                 <div class="player-div">
-                    <img src=".//svg/paper.png" id="paper" alt="open hand">              
+                    <img src=".//svg/paper.png" id="paper" class="player-icon" alt="open hand">              
 
-                    <img src="./svg/rock.png" id="rock" id="paper" alt="open hand">
+                    <img src="./svg/rock.png" id="rock" class="player-icon" alt="open hand">
 
-                    <img src="./svg/scissors.png" id="scissors" id="paper" alt="open hand">
+                    <img src="./svg/scissors.png" id="scissors" class="player-icon" alt="open hand">
                 </div>
 
                     <div class="score">
