added playerChoice fn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
     
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+
 </head>
 <body>
     <div class="container">
@@ -79,5 +79,6 @@
             <a href="https://www.flaticon.com/free-icons/equal" title="equal icons">Icon Pack: Numbers And Special Characters icons created by Md Tanvirul Haque - Flaticon</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
