--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
             <div class="results-container">
                 <div class="result-icons">
-                    <div class="player choice">
-                        <img id="player-choice" src="./svg/rock.png" alt="">
+                    <div class="player-choice">
+                        <img id="player-choice" src="./svg/question-mark.png" alt="">
                     </div>
 
                     <div class="decision-choice">
@@ -46,7 +46,7 @@
                     </div>
         
                     <div class="computer-choice">
-                        <img src="./svg/rock.png" alt="">
+                        <img id="computer-choice" src="./svg/question-mark.png" alt="">
                     </div>
                 </div>
     
@@ -72,13 +72,14 @@
             </div>
         </div>
 
-        <div class="footer-container">
-            <p>bomszx</p>
+
+    </div>
+            <div class="footer-container">
+
             <a href="https://www.flaticon.com/free-icons/hands-and-gestures" title="hands and gestures icons">Hands and gestures icons created by Freepik - Flaticon</a>
 
             <a href="https://www.flaticon.com/free-icons/equal" title="equal icons">Icon Pack: Numbers And Special Characters icons created by Md Tanvirul Haque - Flaticon</a>
         </div>
-    </div>
     <script src="script.js"></script>
 </body>
 </html>
