made fn to update resutls banner into player choices

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                     <img src="./svg/rock.png" id="rock" class="player-icon" alt="open hand">
 
-                    <img src="./svg/scissors.png" id="scissors" class="player-icon" alt="open hand">
+                    <img src="./svg/scissor.png" id="scissor" class="player-icon" alt="open hand">
                 </div>
 
                     <div class="score">
@@ -64,7 +64,7 @@
 
                     <img src="./svg/rock.png" altt="open hand">
 
-                    <img src="./svg/scissors.png" alt="open hand">
+                    <img src="./svg/scissor.png" alt="open hand">
                 </div>
                 <div class="score">
                     <p>I'm a score element</p>
