added function that updates reuslt banner with result message

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                     <div class="score">
-                        <p>I'm a score element</p>
+                        <p id="pScore">I'm a score element</p>
                     </div>
             </div>
 
@@ -52,7 +52,7 @@
     
                 <div class="results-tab">
                     <div class="result-banner">
-                        <p>im a result banner</p>
+                        <p id="resultText">im a result banner</p>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                     <img src="./svg/scissor.png" alt="open hand">
                 </div>
                 <div class="score">
-                    <p>I'm a score element</p>
+                    <p id="compScore">I'm a score element</p>
                 </div>
             </div>
         </div>
