added endgame fn that disables the player div

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <div class="title-container">
             <h1>ROCK, PAPER, SCISSORS!</h1>
         </div>
-
        
         <div class="grid-container">
             <div class="player tab">
@@ -31,7 +30,7 @@
                 </div>
 
                     <div class="score">
-                        <p id="pScore">I'm a score element</p>
+                        <p id="pScore"></p>
                     </div>
             </div>
 
@@ -52,7 +51,7 @@
     
                 <div class="results-tab">
                     <div class="result-banner">
-                        <p id="resultText">im a result banner</p>
+                        <p id="resultText"></p>
                     </div>
                 </div>
             </div>
@@ -67,11 +66,13 @@
                     <img src="./svg/scissor.png" alt="open hand">
                 </div>
                 <div class="score">
-                    <p id="compScore">I'm a score element</p>
+                    <p id="compScore"></p>
                 </div>
             </div>
         </div>
+    </div>
 
+    <div class="modal-content">
 
     </div>
             <div class="footer-container">
