added modal element

--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
         </div>
     </div>
 
-    <div class="modal-content">
-
+    <div class="modal">
+        <div class="modal-content">
+            <p id="modal-message">This is a test message</p>
+            <button id="modal-btn">Play again?</button>
+        </div>
     </div>
             <div class="footer-container">
 
