--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 </head>
 <body>
-    <div class="container">
-        <div class="title-container">
-            <h1>ROCK, PAPER, SCISSORS!</h1>
-        </div>
+    <!-- <div class="container"> -->
+        <header class="title-container">
+            <h1 class="title">ROCK, PAPER, SCISSORS!</h1>
+        </header>
        
-        <div class="grid-container">
+        <main class="grid-container">
             <div class="player tab">
                 <h2>Player</h2>
                 <div class="player-div">
@@ -69,21 +69,23 @@
                     <p id="compScore"></p>
                 </div>
             </div>
-        </div>
-    </div>
+        </main>
+        
+        <footer class="footer-container">
+            <a href="https://www.flaticon.com/free-icons/hands-and-gestures" title="hands and gestures icons">Hands and gestures icons created by Freepik - Flaticon</a>
 
-    <div class="modal">
+            <a href="https://www.flaticon.com/free-icons/equal" title="equal icons">Icon Pack: Numbers And Special Characters icons created by Md Tanvirul Haque - Flaticon</a>
+        </footer>
+    <!-- </div> -->
+
+    <div class="modal"></div>
         <div class="modal-content">
             <p id="modal-message">This is a test message</p>
             <button id="modal-btn">Play again?</button>
         </div>
     </div>
-            <div class="footer-container">
 
-            <a href="https://www.flaticon.com/free-icons/hands-and-gestures" title="hands and gestures icons">Hands and gestures icons created by Freepik - Flaticon</a>
 
-            <a href="https://www.flaticon.com/free-icons/equal" title="equal icons">Icon Pack: Numbers And Special Characters icons created by Md Tanvirul Haque - Flaticon</a>
-        </div>
     <script src="script.js"></script>
 </body>
 </html>
