fixed modal showing up upon initialization

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="score">
-                    <p id="pScore"></p>
+                    <p id="pScore">0</p>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                     <img src="./svg/scissor.png" alt="open hand">
                 </div>
                 <div class="score">
-                    <p id="compScore"></p>
+                    <p id="compScore">0</p>
                 </div>
             </div>
         </main>
