--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
         </main>
         
         <footer class="footer-container">
-            <a href="https://www.flaticon.com/free-icons/hands-and-gestures" title="hands and gestures icons">Hands and gestures icons created by Freepik - Flaticon</a>
-
-            <a href="https://www.flaticon.com/free-icons/equal" title="equal icons">Icon Pack: Numbers And Special Characters icons created by Md Tanvirul Haque - Flaticon</a>
+            <a href="https://www.flaticon.com/free-icons/hands-and-gestures" title="hands and gestures icons">Hands and gestures and special characters created by Freepik  & Md Tanvirul Haque</a>
         </footer>
 
 
