added fn to hightlight comp choice

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
             <div class="computer tab">
                 <h2>Computer</h2>
                 <div class="computer-div">
-                    <img src=".//svg/paper.png" altt="open hand">
+                    <img src=".//svg/paper.png" id="comp-paper" alt="open hand">
 
-                    <img src="./svg/rock.png" altt="open hand">
+                    <img src="./svg/rock.png"  id="comp-rock" alt="open hand">
 
-                    <img src="./svg/scissor.png" alt="open hand">
+                    <img src="./svg/scissor.png"  id="comp-scissor" alt="open hand">
                 </div>
                 <div class="score">
                     <p id="compScore">0</p>
